--- a/Hat/app/build.gradle
+++ b/Hat/app/build.gradle
@@ -40,10 +40,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     // personal
     api 'com.tonystark.android:socket:4.2.3'//you can specify version
     api 'com.tonystark.android:socket-server:4.2.3'//you can specify version
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.0'
 }
