--- a/Hat/app/build.gradle
+++ b/Hat/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     api 'com.tonystark.android:socket:4.2.3'//you can specify version
     api 'com.tonystark.android:socket-server:4.2.3'//you can specify version
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.42.6'
 }
