--- a/Hat/app/src/main/AndroidManifest.xml
+++ b/Hat/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".MapNavigationActivity"
             android:parentActivityName=".MainActivity"
             android:label="@string/title_activity_map_navigation"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
