--- a/Hat/build.gradle
+++ b/Hat/build.gradle
@@ -4,7 +4,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
@@ -18,6 +17,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'https://mapbox.bintray.com/mapbox' }
     }
 }
 
