--- a/Hat/app/build.gradle
+++ b/Hat/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.6'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
 //   implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.8.0'
+
+
+    implementation "com.polidea.rxandroidble2:rxandroidble:1.11.1"
 }
