--- a/Hat/app/src/main/AndroidManifest.xml
+++ b/Hat/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+<!--        <activity-->
+<!--            android:name=".MapNavigationActivity"-->
+<!--            android:parentActivityName=".MainActivity"-->
+<!--            android:label="@string/title_activity_map_navigation"-->
+<!--            android:theme="@style/AppTheme.NoActionBar" />-->
         <activity
             android:name=".MapNavigationActivity"
-            android:parentActivityName=".MainActivity"
-            android:label="@string/title_activity_map_navigation"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
