--- a/Hat/app/build.gradle
+++ b/Hat/app/build.gradle
@@ -49,13 +49,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     // personal
-    api 'com.tonystark.android:socket:4.2.3'//you can specify version
-    api 'com.tonystark.android:socket-server:4.2.3'//you can specify version
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.6'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
 //   implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.8.0'
 
+    implementation 'com.github.harry1453:android-bluetooth-serial:v1.1'
 
-    implementation "com.polidea.rxandroidble2:rxandroidble:1.11.1"
+    // RxJava is also required.
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 }
