--- a/Hat/app/build.gradle
+++ b/Hat/app/build.gradle
@@ -54,8 +54,8 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
 //   implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.8.0'
 
-    implementation 'com.github.harry1453:android-bluetooth-serial:v1.1'
-
+//    implementation 'com.github.harry1453:android-bluetooth-serial:v1.1'
+//
     // RxJava is also required.
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
