--- a/Hat/build.gradle
+++ b/Hat/build.gradle
@@ -19,7 +19,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url 'https://mapbox.bintray.com/mapbox' }
-        maven { url 'https://jitpack.io' }
+//        maven { url 'https://jitpack.io' }
     }
 }
 
