--- a/Hat/app/src/main/AndroidManifest.xml
+++ b/Hat/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".CompassActivity" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
